hphp/hack/test/typecheck/reactive/test_mutable_return9.php.exp
File "test_mutable_return9.php", line 12, characters 10-11:
Functions marked <<__MutableReturn>> must return mutably owned values (Typing[4216])
File "test_mutable_return9.php", line 6, characters 10-13:
This function is marked <<__MutableReturn>>
File "test_mutable_return9.php", line 12, characters 10-11:
This expression is (borrowed)
